@@ -17,14 +17,19 @@ version_rel_hour = 20
 [Prereq]
 
 Dist::Zilla::Plugin::AutoVersion::Relative = 0.01006104
-Dist::Zilla = 2.101310
+Dist::Zilla = 4.101582
 Dist::Zilla::Plugin::Repository = 0.11
 Dist::Zilla::Plugin::PodWeaver = 3.093321
 Dist::Zilla::Plugin::MetaProvides = 1.10027518
-Dist::Zilla::Plugin::ReadmeFromPod = 0.04
+Dist::Zilla::Plugin::ReadmeFromPod = 0.12
 Dist::Zilla::Plugin::CompileTests = 1.092870
 Dist::Zilla::Plugin::Git = 1.093410
 Dist::Zilla::Plugin::Twitter = 0.007
+Dist::Zilla::Plugin::ReportVersions::Tiny = 1.01
+Dist::Zilla::Plugin::KwaliteeTests = 1.101420
+Dist::Zilla::Plugin::PortabilityTests = 1.101420
+Pod::Coverage::TrustPod = 0
+Test::CPAN::Meta        = 0
 MooseX::Has::Sugar = 0.0405
 Moose = 1.01
 namespace::autoclean = 0.09
