@@ -14,6 +14,7 @@ Carp::carp("[inc::lib] $lib added to \@INC");
 sub log_debug   { 1; }
 sub plugin_name { 'inc::lib' }
 sub dump_config { }
+sub register_component { }
 
 1;
 
