@@ -1,9 +1,0 @@
-
-use strict;
-use warnings;
-
-use Test::More;
-use Test::Kwalitee;
-
-
-
